src/test/test-models/bad/functions-bad23.stan
functions {
  real bar(real x) {
    return;
  }
}
